--- a/homework2-2.html
+++ b/homework2-2.html
@@ -28,24 +28,24 @@
 
 <table>
   <tr>
-    <td style="background-color:rgb(0, 0, 0)  style="color:rgb(255, 255, 255);">게임명</td>
-    <td style="color:rgb(255, 255, 255);">장르/개발사</td>
-    <td style="color:rgb(255, 255, 255);">점유율</td>
+    <td style="color:rgb(0, 0, 0);">게임명</td>
+    <td style="color:rgb(0, 0, 0);">장르/개발사</td>
+    <td style="color:rgb(0, 0, 0);">점유율</td>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>리그 오브 레전드</td>
+    <td>RTS / 라이엇게임즈</td>
+    <td>36.35%</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>FC 온라인</td>
+    <td>스포츠 / 넥슨슨</td>
+    <td>13.29%</td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
+    <td>발로란트</td>
+    <td>FPS / 라이엇게임즈</td>
+    <td>7.13%</td>
   </tr>
   <tr>
     <td>Island Trading</td>
