--- a/homework2-2.html
+++ b/homework2-2.html
@@ -80,6 +80,31 @@
     <td>RPG / 스마일게이트</td>
     <td>3.28%</td>
   </tr>
+  <tr>
+    <td>던전앤파이터</td>
+    <td>액션 / 넥슨</td>
+    <td>2.96%</td>
+  </tr>
+  <tr>
+    <td>스타크래프트 리마스터</td>
+    <td>RTS / 블리자드</td>
+    <td>1.89%</td>
+  </tr>
+  <tr>
+    <td>메이플스토리 월드</td>
+    <td>아케이드 / 넥슨</td>
+    <td>1.83%</td>
+  </tr>
+  <tr>
+    <td>패스 오브 엑자일2</td>
+    <td>RPG / 카카오/ 그라인딩 기어 게임즈</td>
+    <td>1,26%</td>
+  </tr>
+  <tr>
+    <td>카트라이더: 드리프트</td>
+    <td>레이싱 / 넥슨</td>
+    <td>0.79%</td>
+  </tr>
 
 </table>
 
