--- a/homework2-2.html
+++ b/homework2-2.html
@@ -32,77 +32,77 @@
 </head>
 <body>
 
-<h2>피시방 점유율 순위(2025년 2월 기준)</h2>
+<h2>PC Room Share Ranking (as of February 2025)</h2>
 
 <table>
   <tr>
-    <th>게임명</th>
-    <th>장르/개발사</th>
-    <th>점유율</th>
+    <th>Game name</th>
+    <th>a genre/developer</th>
+    <th>share</th>
   </tr>
   <tr>
-    <td>리그 오브 레전드</td>
-    <td>RTS / 라이엇게임즈</td>
+    <td>League of Legend</td>
+    <td>RTS / Riot Games</td>
     <td>36.35%</td>
   </tr>
   <tr>
-    <td>FC 온라인</td>
-    <td>스포츠 / 넥슨</td>
+    <td>FC Online</td>
+    <td>Sport / Nexon</td>
     <td>13.29%</td>
   </tr>
   <tr>
-    <td>발로란트</td>
-    <td>FPS / 라이엇게임즈</td>
+    <td>Valorant</td>
+    <td>FPS / Riot Games</td>
     <td>7.13%</td>
   </tr>
   <tr>
-    <td>배틀그라운드</td>
-    <td>FPS / 카카오 / 스팀</td>
+    <td>Battleground</td>
+    <td>FPS / Kakao / Steam</td>
     <td>6.84%</td>
   </tr>
   <tr>
-    <td>서든어택</td>
-    <td>FPS / 넥슨</td>
+    <td>Sudden Attack</td>
+    <td>FPS / Nexon</td>
     <td>5.26%</td>
   </tr>
   <tr>
-    <td>메이플스토리</td>
-    <td>RPG / 넥슨</td>
+    <td>Maplestory</td>
+    <td>RPG / Nexon</td>
     <td>4.74%</td>
   </tr>
   <tr>
-    <td>오버워치2</td>
-    <td>FPS / 블리자드</td>
+    <td>Overwatch2</td>
+    <td>FPS / Blizzard</td>
     <td>3.68%</td>
   </tr>
   <tr>
-    <td>로스트아크</td>
-    <td>RPG / 스마일게이트</td>
+    <td>Lost Ark</td>
+    <td>RPG / Smilegate</td>
     <td>3.28%</td>
   </tr>
   <tr>
-    <td>던전앤파이터</td>
-    <td>액션 / 넥슨</td>
+    <td>Dungeon and Fighter</td>
+    <td>Action / Nexon</td>
     <td>2.96%</td>
   </tr>
   <tr>
-    <td>스타크래프트 리마스터</td>
-    <td>RTS / 블리자드</td>
+    <td>Starcraft Remastered</td>
+    <td>RTS / Blizzard</td>
     <td>1.89%</td>
   </tr>
   <tr>
-    <td>메이플스토리 월드</td>
-    <td>아케이드 / 넥슨</td>
+    <td>Maple Story World</td>
+    <td>Arcade / Nexon</td>
     <td>1.83%</td>
   </tr>
   <tr>
-    <td>패스 오브 엑자일2</td>
-    <td>RPG / 카카오/ 그라인딩 기어 게임즈</td>
+    <td>Pass of Exile 2</td>
+    <td>RPG / Kakao / Grinding Gear Games</td>
     <td>1,26%</td>
   </tr>
   <tr>
-    <td>카트라이더: 드리프트</td>
-    <td>레이싱 / 넥슨</td>
+    <td>Kartrider: Drift</td>
+    <td>Racing / Nexon</td>
     <td>0.79%</td>
   </tr>
 
