--- a/homework2-1.html
+++ b/homework2-1.html
@@ -5,24 +5,24 @@
 </head>
 <body>
 
-<h1>백종원 논란</h1>
-<p>이전부터 더본코리아에서 국내산 돼지 뒷다리육을 이용해 만든 프레스햄인 빽햄은 스팸에 비해 비쌌으나[25] 그래도 해당 상품을 구매하는 것은 사람들의 선택의 자유라 큰 논란은 없었다.
+<h1>Jongwon Baek controversy</h1>
+<p>Previously, Pressed Ham, which is made using domestic pig hind legs meat in Dubon Korea, was more expensive than spam, but there was no controversy over purchasing the product because it was people's freedom to choose.
 </p>
 
-<p>그러나 프랜차이즈 관리 부실 논란이 수면 위로 올라온 분위기인 2025년 1월 설날 직전, 백종원이 본인의 유튜브 채널에 '내팔렘'이라는 코너를 만들며 자사 홈페이지에서 구매하면 원래 51,900원인 200g짜리 빽햄 9개입 세트를 45% 할인된 가격인 28,500원에 구입이 가능하다며 홍보했다. 본인이 직접 나와 "나 같으면 10세트를 사놓는다", "이번이 아니면 불가능한 저렴한 가격", "좀 친하게 지내는 아는 지인에게 줄 거라면 3세트 정도는 줘야 체면을 치룬다."며 홍보했는데, 여기서부터 본격적인 논란이 발생했다. 기존 판매가가 5만 원이 넘는다는 발언과는 달리 기존 판매가가 3만 원 정도밖에 안 된다는 사실이 알려지며 평소 판매 가격과 달리 정가를 터무니없이 부풀려 할인율을 크게 보이게 하기 위한 상술이 아니냐는 부정적 여론이 확산되기 시작한 것이다.</p>
+<p>However, just before the Lunar New Year in January 2025, when the controversy over poor franchise management came to the surface, Jongwon Baek created a section called "Napalem" on his YouTube channel and promoted that if you buy it on its website, you can buy a set of nine 200 grams of back ham, which was originally 51,900 won, at a 45% discount of 28,500 won. He came out and promoted, saying, "If I were you, I would buy 10 sets," "It would be impossible if not this time," and "If I'm going to give it to a close acquaintance, I would save face by giving it at least 3 sets." Controversy arose in earnest from here. Contrary to the previous statement that the existing sales price is over 50,000 won, negative public opinion began to spread that the existing sales price was only 30,000 won, and that it was a tactic to make the discount rate look large by inflating the list price ridiculously unlike the usual sales price.</p>
 
-<p>이후 가격 조정이 됐으나 해당 할인 행사 당시 쿠팡은 업체의 권장소비자가/공식 판매가/90일 내 쿠팡 판매 최고가 중 표시되는 정가 31,210원 #에서 4% 할인하여 29,910원에 판매, 쿠폰 등 추가 할인 여지까지 있었고, 쿠팡 가격 추적 어플을 이용한 듯한 글에는 1년간 상시가 3만 원 초반이었다는 주장이 있으며 # 다나와 또한 2년 간 대체로 3만 원 초반의 가격을 보여준다. PC 버전 필요 후술한 해명 영상의 댓글 중 2년 전 편의점에서는 원가 21,400원, 판매가 29,800원으로 마진 8400원이었다는 주장도 있었고, 엠엘비파크의 과거 게시물에는 그 댓글의 주장대로 2021년 빽햄 선물세트 가격이 9개 29,800원이었다는 것이 발굴되어 이는 소비자 기만이라는 여론까지 생겨났다. 이에 따르면 실제 할인율은 백종원이 홍보하던 대로 45% 씩이나 할인한게 아니라 대략 10~20% 남짓한 평범한 할인이다.</p>    
+<p>Since then, the price has been adjusted, but at the time of the discount event, Coupang had room for additional discounts such as sales and coupons at 29,910 won, with a 4% discount from the recommended price of 31,210 won #, which is displayed among the highest prices of Coupang sales within 90 days. According to the article that seems to have used the Coupang price tracking application, there is a claim that the price was always in the early 30,000 won for a year, and #Dana also shows the price generally in the early 30,000 won for two years. Among the comments on the explanation video that PC version is needed, some argued that the margin was 8,400 won at convenience stores two years ago with 21,400 won in cost and 29,800 won in sales, and MLB Park's past post found that the price of the Backham gift set in 2021 was 29,800 won, as the comment claimed, which led to public opinion that it was a consumer deception. According to this, the actual discount rate is not a 45% discount as Jongwon Baek promoted, but an ordinary discount of about 10-20%.</p>
 
-<p>본래 프레스햄의 대표격인 스팸과 비교해보면 같은 사이즈의 스팸(국산, 외산 혼용 돼지고기 함량 92.44%)은 10개입 23,900원이라 오히려 빽햄보다 저렴하며, 심지어 국산 돼지고기 캔햄이 인지도가 낮다고 생각해 백종원이 캔햄 시장에 진입한 계기가 된 경쟁 상품 농협목우촌의 뚝심(국산 돼지고기 함량 83.7%)은 같은 사이즈가 빽햄 출시 이후 한 번도 빽햄보다 비싼 적이 없다.</p>
+<p>Compared to the original representative spam of Pressham, spam of the same size (92.44%) is 23,900 won for 10 pieces, which is cheaper than Backham, and even the competition product Nonghyup Mokuchon's Ttuksim (83.7% of Korean pork content), which led Jongwon Baek to enter the Canham market because it thought that domestic pork canham was less recognized, has never been more expensive than Backham since its launch.</p>
 
-<p>이에 백종원은 본인 유튜브 채널의 더본뉴스 영상을 통해 해당 논란에 대해 해명했는데 주장의 요지는 하기와 같다.</p>
+<p>Accordingly, the Jongwon Baek explained the controversy through a video of The Born News on his YouTube channel, and the summary of the claim is as follows.</p>
 
 <ul>
-    <li>스팸을 만드는 회사는 수많은 공장을 통해 빽햄보다 많은 양을 만들고 많은 재료로 만드는 만큼 저렴할 수밖에 없다.</li>
-    <li>빽햄은 이런 회사들에 비해 새로운 주자라 비교해 보면 이들에 비해 소량 생산이고 원가 + 공장 유지비를 생각도 해야 한다.</li>
-    <li>유통마진까지 붙어서 51,900원이고 이번 행사가 끝나면 자사 공식사이트서 구입 시 유통마진이 줄어들어서 상시 할인 예정이다.</li>
-    <li>이번 행사가 마진을 밝히자면 1세트당 1,500원밖에 안 된다.</li>
-    <li>고기 함유량은 스팸과 비교하면 차이 나는데 14g 차이이고 60원밖에 안 되며, 이 14g을 넣을 바에 부대찌개 등 국물 맛에 특화되는 더본코리아만의 레시피를 넣었다.</li>
+<li>Companies that make spam are bound to be cheaper as they make more than backham through numerous factories and make it with a lot of materials.</li>
+<li>Baekham is a new player compared to these companies, so compared to them, it is a small production and cost + factory maintenance costs should be considered.</li>
+<li>The distribution margin is 51,900 won, and after this event, the distribution margin will be reduced when purchasing from the company's official website, so the discount will be given at all times.</li>
+<li>This event is only 1,500 won per set to reveal the margin.</li>
+<li>The meat content is different compared to spam, with a difference of 14g and only 60 won, and instead of adding 14g, Dubon Korea's own recipe specializing in the taste of soup such as budae jjigae was added.</li>
 </ul>
 
 </body>
