--- a/homework2-1.html
+++ b/homework2-1.html
@@ -18,6 +18,7 @@
 <p>Accordingly, the Jongwon Baek explained the controversy through a video of The Born News on his YouTube channel, and the summary of the claim is as follows.</p>
 
 <ul>
+<p><a href="https://namu.wiki/w/%EB%B0%B1%EC%A2%85%EC%9B%90/%EB%85%BC%EB%9E%80#s-4.4">Visit Namuwiki!</a></p>
 <li>Companies that make spam are bound to be cheaper as they make more than backham through numerous factories and make it with a lot of materials.</li>
 <li>Baekham is a new player compared to these companies, so compared to them, it is a small production and cost + factory maintenance costs should be considered.</li>
 <li>The distribution margin is 51,900 won, and after this event, the distribution margin will be reduced when purchasing from the company's official website, so the discount will be given at all times.</li>
