--- a/homework2-1.html
+++ b/homework2-1.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Jongwon Baek controversy</h1>
-<img src="백종원.jpg" alt="Trulli" width="300" height="333">
+<img src=""https://th.bing.com/th/id/OIP.4TBEJ5YzZYpMJlrtik-QAwHaJL?w=140&h=180&c=7&r=0&o=5&pid=1.7"" alt="Trulli" width="300" height="333">
 <p>Previously, Pressed Ham, which is made using domestic pig hind legs meat in Dubon Korea, was more expensive than spam, but there was no controversy over purchasing the product because it was people's freedom to choose.
 </p>
 
