--- a/homework2-1.html
+++ b/homework2-1.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
 </head>
 <body>
 
-<h1>Jongwon Baek controversy</h1>
-<img src="https://th.bing.com/th/id/OIP.4TBEJ5YzZYpMJlrtik-QAwHaJL?w=140&h=180&c=7&r=0&o=5&pid=1.7" alt="Trulli" width="300" height="333">
-<p>Previously, Pressed Ham, which is made using domestic pig hind legs meat in Dubon Korea, was more expensive than spam, but there was no controversy over purchasing the product because it was people's freedom to choose.
-</p>
+    <h1>Jongwon Baek controversy</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Baek_Jong-won_from_acrofan.jpg" 
+         alt="백종원" width="300" height="333">
 
-<p>However, just before the Lunar New Year in January 2025, when the controversy over poor franchise management came to the surface, Jongwon Baek created a section called "Napalem" on his YouTube channel and promoted that if you buy it on its website, you can buy a set of nine 200 grams of back ham, which was originally 51,900 won, at a 45% discount of 28,500 won. He came out and promoted, saying, "If I were you, I would buy 10 sets," "It would be impossible if not this time," and "If I'm going to give it to a close acquaintance, I would save face by giving it at least 3 sets." Controversy arose in earnest from here. Contrary to the previous statement that the existing sales price is over 50,000 won, negative public opinion began to spread that the existing sales price was only 30,000 won, and that it was a tactic to make the discount rate look large by inflating the list price ridiculously unlike the usual sales price.</p>
-
-<p>Since then, the price has been adjusted, but at the time of the discount event, Coupang had room for additional discounts such as sales and coupons at 29,910 won, with a 4% discount from the recommended price of 31,210 won #, which is displayed among the highest prices of Coupang sales within 90 days. According to the article that seems to have used the Coupang price tracking application, there is a claim that the price was always in the early 30,000 won for a year, and #Dana also shows the price generally in the early 30,000 won for two years. Among the comments on the explanation video that PC version is needed, some argued that the margin was 8,400 won at convenience stores two years ago with 21,400 won in cost and 29,800 won in sales, and MLB Park's past post found that the price of the Backham gift set in 2021 was 29,800 won, as the comment claimed, which led to public opinion that it was a consumer deception. According to this, the actual discount rate is not a 45% discount as Jongwon Baek promoted, but an ordinary discount of about 10-20%.</p>
-
-<p>Compared to the original representative spam of Pressham, spam of the same size (92.44%) is 23,900 won for 10 pieces, which is cheaper than Backham, and even the competition product Nonghyup Mokuchon's Ttuksim (83.7% of Korean pork content), which led Jongwon Baek to enter the Canham market because it thought that domestic pork canham was less recognized, has never been more expensive than Backham since its launch.</p>
-
-<p>Accordingly, the Jongwon Baek explained the controversy through a video of The Born News on his YouTube channel, and the summary of the claim is as follows.</p>
-
-<ul>
-<p><a href="https://th.bing.com/th/id/OIP.4TBEJ5YzZYpMJlrtik-QAwHaJL?w=140&h=180&c=7&r=0&o=5&pid=1.7">Visit Namuwiki!</a></p>
-<li>Companies that make spam are bound to be cheaper as they make more than backham through numerous factories and make it with a lot of materials.</li>
-<li>Baekham is a new player compared to these companies, so compared to them, it is a small production and cost + factory maintenance costs should be considered.</li>
-<li>The distribution margin is 51,900 won, and after this event, the distribution margin will be reduced when purchasing from the company's official website, so the discount will be given at all times.</li>
-<li>This event is only 1,500 won per set to reveal the margin.</li>
-<li>The meat content is different compared to spam, with a difference of 14g and only 60 won, and instead of adding 14g, Dubon Korea's own recipe specializing in the taste of soup such as budae jjigae was added.</li>
-</ul>
+    <p>Previously, Pressed Ham, which is made using domestic pig hind legs meat in Dubon Korea...</p>
 
 </body>
 </html>
-
-
