--- a/homework2-4.html
+++ b/homework2-4.html
@@ -79,7 +79,7 @@ img {
 <div class="row">
   <div class="left-column">
     <h2>Kyung Hee University</h2>
-    <img src="file:///C:/Users/ak464/Downloads/경희대학교.png" alt="Kyung Hee University" width="150" height="150">
+    <img src="https://image.yes24.com/themusical/fileStorage/ThemusicalAdmin/Theater/Image/20180312123333b258628eaa9e44b791055260ba2b9b8f.jpg" alt="Kyung Hee University" width="150" height="150">
     <span>Seoul Kyung Hee University Peace Hall</span>
     <p>Symphony of Maple Story is a comprehensive performance that allows you to enjoy music and stage art at once in line with the theme of "New Beginning."
         Not only the orchestra playing Maple Story OST, but also the newly participating Quire's songs and performances will give you the feeling of entering Maple Story.</p>
