--- a/homework2-2.html
+++ b/homework2-2.html
@@ -27,6 +27,9 @@
     /* 첫 번째 tr에 있는 th 요소 스타일 */
     tr:first-child th {
         color: white;
+        border: 1px solid #ffffff;
+        text-align: left;
+        padding: 8px;
     }
 </style>
 </head>
