--- a/CSSDemo.html
+++ b/CSSDemo.html
@@ -366,33 +366,43 @@ a:hover {
 
 <div class="container wrapper">
   <div id="top">
-    <h1>Welcome to My Homepage</h1>
-    <p>Use the menu to select different Stylesheets</p>
+    <h1>20240835 한홍민</h1>
+    <p>당신은 선택할 수 있습니다~</p>
   </div>
   <div class="wrapper">
    <div id="menubar">
      <ul id="menulist">
-       <li class="menuitem" onclick="reStyle(0)">Stylesheet 1
-       <li class="menuitem" onclick="reStyle(1)">Stylesheet 2
-       <li class="menuitem" onclick="reStyle(2)">Stylesheet 3
-       <li class="menuitem" onclick="reStyle(3)">Stylesheet 4
-       <li class="menuitem" onclick="noStyles()">No Stylesheet
+       <li class="menuitem" onclick="reStyle(0)"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100">
+       <li class="menuitem" onclick="reStyle(1)"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100">
+       <li class="menuitem" onclick="reStyle(2)"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100">
+       <li class="menuitem" onclick="reStyle(3)"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100">
+       <li class="menuitem" onclick="noStyles()"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100">
      </ul>
     </div>
     <div id="main">
-      <h1>Same Page Different Stylesheets</h1>
-      <p>This is a demonstration of how different stylesheets can change the layout of your HTML page. You can change the layout of this page by selecting different stylesheets in the menu, or by selecting one of the following links:<br>
-      <a href="#" onclick="reStyle(0);return false">Stylesheet1</a>,
-      <a href="#" onclick="reStyle(1);return false">Stylesheet2</a>,
-      <a href="#" onclick="reStyle(2);return false">Stylesheet3</a>,
-      <a href="#" onclick="reStyle(3);return false">Stylesheet4</a>.
+      <h1><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="300" height="300"></h1>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="1000" height="100"></h1><br>
+      <a href="#" onclick="reStyle(0);return false"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h1></a>,
+      <a href="#" onclick="reStyle(1);return false"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h1></a>,
+      <a href="#" onclick="reStyle(2);return false"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h1></a>,
+      <a href="#" onclick="reStyle(3);return false"><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h1></a>,
       </p>
-       <h2>No Styles</h2>
-      <p>This page uses DIV elements to group different sections of the HTML page. Click here to see how the page looks like with no stylesheet:<br><a href="#" onclick="noStyles();return false">No Stylesheet</a>.</p>
+       <h2><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h2>
+       <h2><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"></h2>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="100" height="100"><br><a href="#" onclick="noStyles();return false"></a>.</p>
    </div>
     <div id="sidebar">
-      <h3>Side-Bar</h3>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+      <h3><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="180" height="200"></h3>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      <p><img src="https://booth.pximg.net/146e3eb5-a5b1-4b0a-af01-366150205446/i/4519725/68f33702-2440-4df4-864a-c47ca04661d1_base_resized.jpg" alt="coconut" width="50" height="50"></p>
+      
+      
     </div>
   </div>  
   
