--- a/homework3-2.html
+++ b/homework3-2.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  
-<form method="GET" action="result.php">
+<form method="GET" action="homework3-2.php">
 n input : <input type="text" name="userinput"><br>
 <input type="submit" value="submit">
 </form>
