--- a/homework3-1.html
+++ b/homework3-1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head><meta charset="utf-8"></head>
 <body>
  
 <form method="GET" action="homework3-1.php">
-n input : <input type="text" name="userinput"><br>
+n개의 정수 입력 : <input type="text" name="userinput"><br>
 <input type="submit" value="submit">
 </form>
  
