--- a/homework3-1.html
+++ b/homework3-1.html
@@ -4,7 +4,7 @@
 <body>
  
 <form method="GET" action="homework3-1.php">
-n개의 정수 입력 : <input type="text" name="userinput"><br>
+자연수 n 입력 : <input type="text" name="userinput"><br>
 <input type="submit" value="submit">
 </form>
  
