--- a/homework3-3.html
+++ b/homework3-3.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head><meta charset="utf-8"></head> 
 <body>
  
 <form method="GET" action="homework3-3.php">
-n input : <input type="text" name="userinput"><br>
+100이하의 자연수 n 입력 : <input type="text" name="userinput"><br>
 <input type="submit" value="submit">
 </form>
  
