--- a/homework3-1.html
+++ b/homework3-1.html
@@ -1,3 +1,19 @@
+<?php
+$n = $_GET("userinput");
+$sum = 0;
+$prod = 1;
+for ($x = 1; $x < $n; $x++) {
+    echo("$x + ");
+  $sum = $x + $sum;
+}
+echo "$n = $sum<br>";
+for ($x = 1; $x < $n; $x++) {
+    echo("$x * ");
+  $prod = $prod * $x;
+}
+echo "$x = $prod";
+?>
+
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8"></head>
