--- a/homework3-1.html
+++ b/homework3-1.html
@@ -19,7 +19,7 @@ echo "$x = $prod";
 <head><meta charset="utf-8"></head>
 <body>
  
-<form method="GET" action="homework3-1.php">
+<form method="GET" action="homework3-1.html">
 자연수 n 입력 : <input type="text" name="userinput"><br>
 <input type="submit" value="submit">
 </form>
